# swagger_server/controllers/default_controller.py
@@ -3,6 +3,7 @@ import six
 
 from swagger_server.models.student import Student  # noqa: E501
 from swagger_server import util
+from swagger_server.service import student_service
 
 
 def add_student(body):  # noqa: E501
@@ -13,24 +14,27 @@ def add_student(body):  # noqa: E501
     :param body: Student object that needs to be added
     :type body: dict | bytes
 
-    :rtype: int
+    :rtype: str
     """
     if connexion.request.is_json:
         body = Student.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    return student_service.add_student(body)
 
 
 def delete_student(student_id):  # noqa: E501
     """delete_student
 
-    Delete student by ID # noqa: E501
+     # noqa: E501
 
-    :param student_id: ID of student to delete
+    :param student_id: ID of student to return
     :type student_id: int
 
     :rtype: Student
     """
-    return 'do some magic!'
+    res = student_service.delete_student(student_id)
+    if res:
+        return res
+    return 'Not Found', 404
 
 
 def get_student_by_id(student_id, subject=None):  # noqa: E501
@@ -45,4 +49,13 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
 
     :rtype: Student
     """
-    return 'do some magic!'
+    res = student_service.get_student_by_id(student_id, subject)
+    if res:
+        return res
+    return 'Not Found', 404
+
+def get_students(last_name=None):
+    res = student_service.get_student(last_name)
+    if res:
+        return res
+    return 'Not Found', 404
